overflow bug for features

--- a/src/styles/Customers.module.css
+++ b/src/styles/Customers.module.css
@@ -8,6 +8,7 @@
 }
 
 .marqueeInner {
+  overflow: hidden;
   display: flex;
   align-items: center;
   justify-content: center;
