--- a/src/styles/Features.module.css
+++ b/src/styles/Features.module.css
@@ -1,3 +1,5 @@
 .features {
+  width: 100vw;
+  overflow: hidden;
   margin-top: 25rem;
 }
